# cookiecutter-django-package

./: README.rst  cookiecutter.json
{{ cookiecutter.__project_slug }}/: .pre-commit-config.yml  README.rst  pyproject.toml
{{ cookiecutter.__project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.__project_slug }}/tests/: settings.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.__package_name }}/: apps.py
