[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
    { "name" = "{{ cookiecutter.author }}", "email" = "{{ cookiecutter.email }}" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["django"]
description = "{{ cookiecutter.project_description }}"
license = { "file" = "LICENSE" }
name = "{{ cookiecutter.__project_slug }}"
readme = "README.rst"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.__project_slug }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.__project_slug }}"

[tool.coverage.run]
branch = true
source = ["."]

[tool.hatch.build.targets.sdist]
exclude = ["/tests", "requirements.txt", "runtests.py"]

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.__package_name }}"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["DJ", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
force-single-line = true
